RESOLVED FIXED304225
AX: The line range for a given VisiblePosition should include the line break if one exists at the end of the line.
https://bugs.webkit.org/show_bug.cgi?id=304225
Summary AX: The line range for a given VisiblePosition should include the line break ...
Andres Gonzalez
Reported 2025-12-15 17:40:12 PST
.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-15 17:40:19 PST
Andres Gonzalez
Comment 2 2025-12-15 17:49:20 PST
Andres Gonzalez
Comment 3 2025-12-15 18:13:24 PST
EWS
Comment 4 2025-12-16 06:26:23 PST
Committed 304512@main (da7ff45293ca): <https://commits.webkit.org/304512@main> Reviewed commits have been landed. Closing PR #55450 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.